--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 <!--[if gt IE 8]><!-->            <html class="no-js" lang="en">          	<!--<![endif]-->
 <head>
 	<base href="<%= request.path %>">
+	<meta name="fragment" content="!">
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 
