WSF-4649 Use box/island classes to achieve white background with padding

--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -18,14 +18,16 @@
     <span class="hide-visually"> Close search</span>
   </button>
   <!-- //Close search -->
-  <div class='global-search-results' ng-show='suggestions.length > 0'>
-    <p>Are you looking for</p>
-    <div class='results__products'>
-      <ul>
-        <li ng-repeat="suggestion in suggestions">
-          <a href="<%= centre_products_path(params[:centre_id] || params[:id]) %>{{suggestion['queryString']}}" target="_self">{{suggestion['description']}}</a>
-        </li>
-      </ul>
+  <div class='global-search-results box' ng-show='suggestions.length > 0'>
+    <div class='island'>
+      <p>Are you looking for</p>
+      <div class='results__products'>
+        <ul>
+          <li ng-repeat="suggestion in suggestions">
+            <a href="<%= centre_products_path(params[:centre_id] || params[:id]) %>{{suggestion['queryString']}}" target="_self">{{suggestion['description']}}</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
