--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -38,15 +38,24 @@
         return !$('#map-micello-api').hasClass('map-micello-oldie');
       }
 
+      function ready() {
+        return window.map && map.micello && (map.micello.ie && map.micello.ie.Map || map.micello.Map && window.micello);
+      }
+
       function createMap() {
-        var Map = supported() ? map.micello.Map : map.micello.ie.Map;
-        new Map({select: <%= store_id || 'null' %>});
+        if(ready()) {
+          var Map = supported() ? map.micello.Map : map.micello.ie.Map;
+          new Map({select: <%= store_id || 'null' %>});
+        } else {
+          <%# yepnope complete does not always execute in the correct order -%>
+          setTimeout(arguments.callee, 100);
+        }
       }
 
       Modernizr.load([{
         test: supported(),
-        yep: ['http://maps.micello.com/webmap/v0/micellomap.js', '<%= asset_path 'map/micello.js' %>'],
-        nope: '<%= asset_path 'map/micello_ie.js' %>',
+        yep: ['http://maps.micello.com/webmap/v0/micellomap.js', '<%= asset_url 'map/micello.js' %>'],
+        nope: '<%= asset_url 'map/micello_ie.js' %>',
         complete: createMap
       }]);
 
