Product tile fixes

--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -1,5 +1,7 @@
 <div id="pin-board" class="pin-board">
-  <%- @search.products.each do |product| -%>
-    <%= render partial: "shared/tiles/product", locals: { result: product, image: { href: product.default_image_url, title: product.lozenge_name } } %>
+  <%- @search.products.each do |result| -%>
+    <%= render partial: "/shared/tiles/product",
+        layout: '/layouts/tile',
+        locals: { result: result, image: { href: result.default_image_url, title: result.lozenge_name } } %>
   <%- end -%>
 </div>
