--- a/app/assets/stylesheets/partials/buttons/_main.scss
+++ b/app/assets/stylesheets/partials/buttons/_main.scss
@@ -88,13 +88,12 @@
 
 	/* White */
 	.btn--main-alt4 {
-		background: #fff !important;
 		box-shadow: inset 0 -1px 0 rgba(#000, 0.15);
 
 		/* Bg colour combined with disabled state */
 		&,
 		&[disabled],
-		&.is-disabled {background-color: $color-grey-3;}
+		&.is-disabled {background-color: #fff;}
 
 		/* Parent + pseudo classes */
 		&,
@@ -112,7 +111,7 @@
 	.btn--main-compact {@include to-em(padding, $spacing-third $spacing-base);}
 
 	/* Compact - extra compact padding (use with icons) */
-	.btn--main-compact-icon {@include to-em(padding, $spacing-quarter $spacing-half);}
+	.btn--main-compact-icon {@include to-em(padding, $spacing-half $spacing-half+3.5);}
 
 	/* Large - increase top/btm padding */
 	.btn--main-lrg {@include to-em(padding-top padding-bottom, $spacing-half+$spacing-micro);}
