WSF-4649 Add hidden submit button to enable capybara testing

--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -9,6 +9,7 @@
       ng-model='searchQuery'
       name="search_query" autocomplete="off"
       placeholder="Search stores, products, deals &amp; events&#8230;">
+    <input type='submit' value='Search Products' ng-hide='true'>
   <% end %>
   <!-- //Search form -->
 
