Adding global link style

--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -6,6 +6,7 @@
 $hero-banner-height-sml: 270 !default;
 $hero-banner-height-lrg: 380 !default;
 $header-color-grey: #bababa !default;
+$header-color-link-hover: $color-brand !default;
 
 /* Start header */
 .header {
@@ -300,7 +301,7 @@ $header-color-grey: #bababa !default;
 
 									/* Change state styles at this breakpoint */
 									@include respond-min($ipad-landscape) {
-										color: $color-link-hover;
+										color: $header-color-link-hover;
 									}
 								}
 							}
@@ -311,7 +312,7 @@ $header-color-grey: #bababa !default;
 								.is-header-hero &:focus,
 								.is-header-hero &.is-active {
 									&,
-									.icon:before {color: $color-link-hover;}
+									.icon:before {color: $header-color-link-hover;}
 								}
 							}
 
@@ -647,7 +648,7 @@ $header-color-grey: #bababa !default;
 				.header & .btn:hover,
 				.header & .btn:focus {
 					&,
-					.icon:before {color: $color-link-hover;}
+					.icon:before {color: $header-color-link-hover;}
 				}
 
 					/* 'Signed in' hover & focus states */
@@ -663,7 +664,7 @@ $header-color-grey: #bababa !default;
 					.is-header-hero &.is-my-account-signedin .header-menu-toggle__nav a:focus,
 					.is-header-hero &.is-my-account-signedin .header-menu-toggle__nav .is-active {
 						&,
-						.icon:before {color: $color-link-hover;}
+						.icon:before {color: $header-color-link-hover;}
 					}
 
 				/* 'Signed in' positioning */
@@ -814,7 +815,7 @@ $header-color-grey: #bababa !default;
 
 			/* Hover & focus states */
 			a:hover .icon:before,
-			a:focus .icon:before {color: $color-link-hover;}
+			a:focus .icon:before {color: $header-color-link-hover;}
 
 			/* Search icon */
 			.icon--search:before {
@@ -959,7 +960,7 @@ $header-color-grey: #bababa !default;
 			.header .open-hours-link:hover,
 			.header .open-hours-link:focus {
 				&,
-				.icon:before {color: $color-link-hover;}
+				.icon:before {color: $header-color-link-hover;}
 			}
 
 			/* Hide when not 'Centre home page hero banner' */
@@ -1171,7 +1172,7 @@ $header-color-grey: #bababa !default;
 							color: #fff;
 
 							/* Centre home page hero banner */
-							.is-header-hero & {color: $color-link-hover;}
+							.is-header-hero & {color: $header-color-link-hover;}
 						}
 					}
 
