--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,10 +42,10 @@
 							<li class="open-hours-link"><a href="<%= centre_trading_hours_path( params[ :centre_id ] || params[ :id ] ) %>" target ="_self"><span class="icon icon--hours" aria-hidden="true"></span> <strong>Open <%= twelve_hour_format(@centre.today_opening_time) %> - <%= twelve_hour_format(@centre.today_closing_time) %> today</strong> <span class="icon icon--arrow-right" aria-hidden="true"></span></a></li>
 							<!-- //Shopping centre opening hours -->
 							<li class="shopping-hrs-link"><a href="#" target ="_self"><span class="icon icon--hours icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Shopping Hours</span></a></li>
-							<li><a href="#" target ="_self"><span class="icon icon--dining icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Dining</span></a></li>
+							<!-- <li><a href="#" target ="_self"><span class="icon icon--dining icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Dining</span></a></li>
 							<li><a href="<%= centre_movies_path(params[ :centre_id ] || params[ :id ]) %>" target ="_self"><span class="icon icon--video icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Cinemas</span></a></li>
 							<li><a href="#" target ="_self"><span class="icon icon--info icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Concierge</span></a></li>
-							<li><a href="#" target ="_self"><span class="icon icon--map icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Getting There</span></a></li>
+							<li><a href="#" target ="_self"><span class="icon icon--map icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Getting There</span></a></li> -->
 						</ul>
 					</nav>
 
@@ -106,12 +106,12 @@
 				<!-- //My account / favourites -->
 
 				<!-- Tertiary navigation -->
-				<nav class="header-menu-toggle__nav hide-fully--non-palm" role="navigation" aria-label="Tertiary navigation">
+				<!-- <nav class="header-menu-toggle__nav hide-fully--non-palm" role="navigation" aria-label="Tertiary navigation">
 					<ul class="nav-tertiary">
 						<li><a href="#" target ="_self">Terms &amp; Conditions</a></li>
 						<li><a href="#" target ="_self">Privacy Policy</a></li>
 					</ul>
-				</nav>
+				</nav> -->
 				<!-- //Tertiary navigation -->
 
 			</div>
