Don't show the retailer logo on a deal if it's not there.

--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -1,7 +1,7 @@
 <div class="tile__meta">
   <p class="tile__meta__desc"><%= result.title %></p>
   <span class="tile__meta__image" data-picture data-alt="<%= result.store_name %> logo">
-    <img src="<%= result.retailer_logo_url %>" alt="<%= result.store_name %> logo">
+    <%= image_tag result.retailer_logo_url, alt: "#{result.store_name} logo", onError: %Q(this.parentNode.removeChild(this);)%>
   </span>
 </div>
 
